squash/public/assets/styles.css
/**
 * Slide-out sidebar css
 */
body {
  margin: 0;
  background-color: #f9f9f9;
}

#page_contents {
  padding: 4.5rem 1rem 1rem 1rem;
  height: 100vh;
  margin: 0 auto;
  max-width: 64pc;
  display: flex;
  align-items: stretch;
}

nav {
  flex-basis: 240px;
  flex-grow: 0;
}

#content {
  flex-grow: 1;
}

.collapse-icon {
  display: none!important;
}

@media only screen and (max-width: 767px) {
  .collapse-icon {
    display: inherit!important;
  }
  nav {
    width: 240px!important;
    transform: translate3d(-240px,0,0);
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    overflow-y: scroll;
  }
}

.nav_open #page, .nav_open header {
  transform: translate3d(260px,0,0);
}
.nav_open #page, .nav_open header,
#page, header {
  transition: transform .15s cubic-bezier(.2,.3,.25,.9);
}

/* ************************** */

.profile-photo {
  width: 48px;
  border-radius: 4px;
}


#profile {
  background: #f5f8fa;
}

#profile_contents {
  padding: 2rem 1rem 1rem 1rem;
  height: 100vh;
  margin: 0 auto;
  max-width: 60pc;
}

#cover_photo {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 20pc;
  width: 100%;
}
#cover_photo.none {
  height: 10pc;
  background-color: #e27737;
}

#cover_photo .edit-cover {
  height: 20pc;
  max-width: 60pc;
  margin: 0 auto;
  position: relative;
}
#cover_photo.none .edit-cover {
  height: 10pc;
}

#cover_photo .edit-cover .file-input {
  position: absolute;
  bottom: 10px;
  right: 20px;
}

#cover_photo .edit-cover {
  display: none;
}
#cover_photo:hover .edit-cover {
  display: block;
}


#profile_text {
  width: 100%;
  display: flex;
  align-items: stretch;
}
#profile_info {
  width: 240px;
  flex-grow: 0;
}
#group_entries {
  flex-basis: 400px;
  flex-grow: 3;
}

#profile_photo {
  margin-top: -120px;
  margin-left: 0;
  margin-right: auto;
  width: 180px;
}
#profile_photo img {
  width: 180px;
  border-radius: 6px;
  border: 4px #fff solid;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
}
#profile_bio {
  margin-top: 1pc;
}

#profile_bio h2 {
  margin-bottom: 0;
}
#profile_bio h3 {
  margin-top: 0;
  color: #555;
}

#profile_contents .timezone-info .edit-timezone {
  display: none;
}
#profile_contents .timezone-info:hover .edit-timezone {
  display: inline;
}

.group_list {
  margin: 0;
  padding: 0;
  padding-left: 1.2em;
  font-size: 1.5em;
  line-height: 1.7em;
}


@media only screen and (max-width: 600px) {
  #profile_text {
    display: block;
  }
  #profile_info {
    width: 100%;
    display: flex;
    align-content: stretch;
    margin-top: -20px;
    margin-bottom: 10px;
  }
  #profile_photo {
    flex-grow: 1;
    margin-left: 0;
    margin-top: 0;
  }
  #profile_bio {
    flex-grow: 3;
    margin-top: 0;
  }
  #profile_bio .user_groups {
    list-style-type: none;
    padding-left: 0;
  }
  #profile_bio .user_groups li {
    float: left;
    margin-right: 1em;
  }
}

/* ************************** */

.group-list {
  background: #fff;
  border-radius: 6px;
  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
}


ul.entry-list {
  list-style-type: none;
  margin: 0;
  margin-bottom: 2em;
  padding: 0;
}

.entry {
  border-bottom: 1px #ddd solid;
  margin-bottom: 0;
  padding: 1em 1em 0.5em 1em;
}
.entry:last-child {
  border: 0;
}

.entry .header {
  display: flex;
  align-items: center;
}
.entry .header .left {
  flex-basis: 56px;
  flex-grow: 0;
}
.entry .header .right {
  flex-grow: 1;
}
.entry .header .right .author a:hover {
  text-decoration: none;
}
.entry .header .right .author a:hover .name {
  text-decoration: underline;
}
.entry .header .right .group-date, .entry .header .right .group-date a {
  color: #999;
}
.entry .header .right .group-date a:hover {
  text-decoration: underline;
}


.entry .content {
  padding: 5px 0 10px 0;
  font-size: 1.5em;
  line-height: 1.6em;
}
.entry .content .command, .entry-compact .content .command {
  color: #888;
}

.entry .footer-actions {
  margin: 0;
  padding: 6px 0;
  border-top: 1px #eee solid;
}
.entry .footer-actions .action {
  margin-right: 1em;
  text-decoration: none;
  color: #888;
}
.entry .footer-actions .action.active {
  color: #f08f2e;
}
.entry .footer-actions .action:hover {
  color: #d83;
}
.entry .footer-actions .action.active:hover {
  color: #999;
}

/* ************************** */

.subscribers {
  margin-top: 20px;
}
.subscribers > span {
  margin: 4px 0;
  display: block;
}

ul.group_subscribers {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

ul.group_subscribers li {
  float: left;
  margin-bottom: 4px;
  margin-right: 4px;
}

ul.group_subscribers .hidden {
  display: none;
}

.ui.button.not-subscribed:after {
  content: 'Subscribe';
}
.ui.button.subscribed {
  background-color: #1678c2;
  color: #fff;
  font-weight: normal;
}
.ui.button.subscribed:after {
  content: 'Subscribed';
}
.ui.button.subscribed:hover {
  background-color: #d01919;
}
.ui.button.subscribed:hover:after {
  content: 'Unsubscribe';
}

#group_entries .user-list {
  margin: 0;
  padding: 0;
  background: #fff;
  border-radius: 6px;
  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.2);
}

.date-nav {
  display: flex;
  align-items: center;
  border-bottom: 1px #ddd solid;
}
.date-nav .link {
  flex-grow: 1;
  flex-basis: 80px;
  padding: 10px;
}
.date-nav .link .icon {
  font-weight: bold;
  font-size: 2em;
  line-height: normal;
}
.date-nav .right {
  text-align: right;
}
.date-nav .date {
  flex-grow: 10;
  text-align: center;
  font-size: 1.4em;
}

#group_entries .user {
  border-bottom: 1px #ddd solid;
  margin-bottom: 0;
  padding: 1em 1em 0.5em 1em;
}
#group_entries .user:last-child {
  border: 0;
}

#group_entries .group {
  border-bottom: 1px #ddd solid;
  margin-bottom: 0;
  padding: 1em 1em 0.5em 1em;
}
#group_entries .group:last-child {
  border: 0;
}
.group-list .group .groupname {
  font-size: 1.5em;
}


.user .header {
  display: flex;
  align-items: center;
}
.user .header .left {
  flex-basis: 56px;
  flex-grow: 0;
}
.user .header .right {
  flex-grow: 1;
}
.user .header .right .author .nickname {
  font-size: 1.5em;
  line-height: 1.5em;
}


ul.entry-list-compact {
  list-style-type: none;
  margin: 0 0 10px 0;
  padding: 0;
}

.entry-compact {
  padding-top: 1px;
}
.entry-compact .content {
  padding: 5px 0 5px 0;
  font-size: 1.3em;
  line-height: 1.5em;
}

.entry-compact:hover {
  background: rgba(0,0,0,0.03);
}

.entry-compact .entry-actions {
  opacity: 0;
  float: right;
  padding-right: 1em;
  font-size: 0.8em;
}
.entry-compact:hover .entry-actions {
  opacity: 1;
}
.entry-compact .entry-actions a {
  text-decoration: none;
  color: #888;
}
.entry-compact .entry-actions a.active {
  color: #f08f2e;
}
.entry-compact .entry-actions a.active:hover {
  color: #999;
}
.entry-compact .entry-actions a:hover {
  color: #aaa;
}
.entry-compact .entry-actions .action {
  margin-right: 1em;
  color: #888;
}

/* ************************** */

#entry_permalink {
  max-width: 40pc;
  margin: 0 auto;
  margin-top: 72px;
}


/* ************************** */

.entry .content .text, .entry-compact .content .text {
  white-space: pre-wrap;
}
.entry .content .emojichar, .entry-compact .content .emojichar {
  height: 1.2em;
  vertical-align: text-top;
}

.entry blockquote, .entry-compact blockquote {
  border-left: 4px #e3e4e6 solid;
  padding: 0;
  padding-left: 10px;
  margin: 0;
  margin-left: 4px;
}

.entry pre, .entry-compact pre {
  display: block;
  font-size: 0.75em;
  line-height: 1.15em;
  padding: .5em;
  border: 1px solid rgba(0,0,0,.15);
  border-radius: 3px;
  background: #fbfaf8;
  color: #333;
  margin-bottom: 0;
  margin-top: 4px;
}

.entry code, .entry-compact code {
  font-size: 0.9em;
  padding: 1px 3px;
  border: 1px #e1e1e8 solid;
  border-radius: 3px;
  background: #f7f7f9;
  color: #c25;
}

.ui.vertical.menu .menu .item {
  font-size: 1em;
}

.card {
  border-radius: 0.25rem;
  background: #fff;
  border: 1px solid #e8e8e8;
  box-shadow: 0 1px 0 rgba(0,0,0,.25);
  padding: 1rem;
}

